1098
As of 2.7.3 instead of crashing we get:
{code}
scalac273 a.scala 
a.scala:6: error: stable identifier required, but C.this.x.y found.
  val z: x.y.type   
           ^
one error found
{code}
so I'm closing on the presumption that's the desired behavior.  If that's not the case, could the reopener please update the title/description.
